# Plinex

./: .gitignore  README.md  com.mylesLab.plinex.json  meson.build  org.cannedToes.plinex.json  python3-plex-api-client.json  settings
data/: com.mylesLab.plinex.desktop.in  com.mylesLab.plinex.gschema.xml  com.mylesLab.plinex.metainfo.xml.in  com.mylesLab.plinex.service.in  meson.build  org.cannedToes.plinex.desktop.in  org.cannedToes.plinex.gschema.xml  org.cannedToes.plinex.metainfo.xml.in  org.cannedToes.plinex.service.in
data/icons/: meson.build
po/: POTFILES.in  meson.build
src/: main.c  main.cpp  main.py  meson.build  plinex-application.c  plinex-application.h  plinex-window.c  plinex-window.h  plinex-window.ui  plinex.gresource.xml  plinex.in  window.blp  window.py  window.ui
